Fix fallback on mobile

--- a/eruditorg/static/sass/components/_alerts.scss
+++ b/eruditorg/static/sass/components/_alerts.scss
@@ -34,7 +34,7 @@
 .fallback {
 
   p {
-    padding: 1em 0;
+    padding: 1em;
     font-size: 14px;
     background-color: $mid-grey;
     color: #000;
